syntax = "proto3";
package user;

service User {
    rpc createUser (userDetails) returns (result);
    rpc modifyUser(userDetails) returns (result);
    rpc getUser(userInput) returns (userDetails);
}

message userInput {
    string email = 1;
}

message userDetails{
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string birthday = 4;
    string phonenumber = 5;
}

message result {
    bool success = 1;
}